--- a/app/src/main/res/layout/activity_app_main.xml
+++ b/app/src/main/res/layout/activity_app_main.xml
@@ -11,36 +11,29 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/app_main_background"
     tools:context="com.bigjeon.grumbling.App_Main_Activity">
-
     <RelativeLayout
         android:id="@+id/Title"
+        android:layout_marginTop="7dp"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="55dp"
         android:orientation="horizontal"
-        android:background="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_marginLeft="5dp"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_centerInParent="true"
-            android:layout_alignParentLeft="true"
-            android:background="@android:color/transparent"
-            android:src="@drawable/app_logo">
+            android:id="@+id/App_Main_My_Img"
+            android:layout_marginLeft="15dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            app:civ_border_color="@color/Transparent_Green"
+            app:civ_border_width="1dp"
+            android:layout_marginTop="5dp"
+            android:layout_alignParentLeft="true">
         </de.hdodenhof.circleimageview.CircleImageView>
 
-        <ImageView
-            android:background="@android:color/transparent"
-            android:src="@drawable/app_main_title"
-            android:layout_centerInParent="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-        </ImageView>
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/App_Main_Notice_Civ"
             android:layout_width="35dp"
@@ -90,6 +83,7 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
@@ -142,7 +136,7 @@
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_centerInParent="true"
-                android:background="@drawable/ic_baseline_maps_ugc_24"></de.hdodenhof.circleimageview.CircleImageView>
+                android:background="@drawable/ic_baseline_question_answer_24"></de.hdodenhof.circleimageview.CircleImageView>
         </RelativeLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
