--- a/app/src/main/res/layout/activity_post_write.xml
+++ b/app/src/main/res/layout/activity_post_write.xml
@@ -11,11 +11,12 @@
     </data>
     <RelativeLayout
         xmlns:tools="http://schemas.android.com/tools"
-        android:background="@color/white"
+        android:background="@drawable/post_chatting_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <RelativeLayout
             android:id="@+id/Top_Bar"
+            android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_alignParentTop="true">
@@ -50,10 +51,11 @@
             </TextView>
             <Button
                 android:id="@+id/Dialog_Posting_Complete_CIV"
-                android:text="게시"
-                android:textSize="15dp"
+                android:text="등록"
+                android:textSize="12dp"
                 android:background="@drawable/round_shape_off"
                 android:textColor="@color/black"
+                android:textStyle="bold"
                 android:layout_centerInParent="true"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="5dp"
@@ -93,8 +95,7 @@
             android:id="@+id/Dialog_Posting_Setting_Container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/Dialog_Posting_Content_Container"
-            android:background="@color/white">
+            android:layout_below="@+id/Dialog_Posting_Content_Container">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/Dialog_Posting_Set_Text"
@@ -119,10 +120,11 @@
             <Button
                 android:id="@+id/Dialog_Posting_Set_Grade"
                 android:layout_width="wrap_content"
-                android:layout_height="35dp"
+                android:layout_height="30dp"
                 android:layout_alignParentRight="true"
-                android:layout_marginTop="2dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="7dp"
+                android:textStyle="bold"
                 android:background="@drawable/round_shape_off"
                 android:text="잡담"
                 android:textColor="@color/black"
@@ -137,6 +139,8 @@
                     android:id="@+id/Post_Write_ViewPager2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:background="@color/Transparent_Black30"
                     android:clipChildren="false"
                     android:clipToPadding="false"></androidx.viewpager2.widget.ViewPager2>
             </RelativeLayout>
