--- a/app/src/main/res/layout/activity_show_selected_post.xml
+++ b/app/src/main/res/layout/activity_show_selected_post.xml
@@ -12,11 +12,13 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/post_chatting_background"
     tools:context="com.bigjeon.grumbling.Show_Selected_Post_Activity">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/Selected_Post_Toolbar"
+        android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         app:contentInsetStart="0dp"
         app:layout_constraintTop_toTopOf="parent">
         <RelativeLayout
@@ -36,8 +38,8 @@
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_toRightOf="@id/Post_View_BackPress_Imv"
                 android:id="@+id/Selected_Post_User_Img"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
                 android:layout_centerInParent="true"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
@@ -55,7 +57,7 @@
                 android:layout_toRightOf="@+id/Selected_Post_User_Img"
                 android:text="User_Name"
                 android:textColor="@color/black"
-                android:textSize="10dp"
+                android:textSize="12dp"
                 android:textStyle="bold">
             </TextView>
         </RelativeLayout>
@@ -71,7 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="5.5"
-            android:background="@color/white">
+            android:background="@android:color/transparent">
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -97,17 +99,17 @@
             <RelativeLayout
                 android:id="@+id/Selected_Post_Bottom_Container"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="50dp"
                 android:layout_alignParentBottom="true"
-                android:background="@color/white">
+                android:background="@android:color/transparent">
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/Selected_Post_Enter_Chatting_CIV"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_alignParentRight="true"
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
+                    android:padding="3dp"
                     android:layout_centerInParent="true"
-                    android:layout_marginRight="5dp"
-                    android:src="@drawable/ic_baseline_chat_24">
+                    android:layout_toRightOf="@id/Selected_Post_Favorite_Count_TV"
+                    android:background="@drawable/chatting_btn">
                 </de.hdodenhof.circleimageview.CircleImageView>
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/Selected_Post_Favorite_Circle_CIV"
@@ -123,17 +125,41 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginRight="5dp"
                     android:layout_toRightOf="@+id/Selected_Post_Favorite_Circle_CIV"
                     android:text="000"
-                    android:textSize="10dp"></TextView>
+                    android:textSize="10dp">
+                </TextView>
+                <TextView
+                    android:id="@+id/Show_Selected_Post_Whrite_Date_Tv"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginBottom="3dp"
+                    android:textSize="10dp"
+                    android:textStyle="bold"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                </TextView>
             </RelativeLayout>
         </RelativeLayout>
         <RelativeLayout
+            android:id="@+id/Show_Selected_Post_Chat_Container"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:padding="5dp"
-            android:layout_weight="6">
+            android:background="@android:color/transparent"
+            android:layout_weight="3">
+            <TextView
+                android:id="@+id/Show_Selected_Post_None_Chat_TV"
+                android:visibility="visible"
+                android:textSize="15dp"
+                android:textColor="@color/Transparent_Black30"
+                android:textStyle="bold"
+                android:text="현재 등록된 채팅이 없습니다.\n 자유롭게 채팅에 참여해보세요!"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            </TextView>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/Chat_List_Rcv"
                 android:layout_width="match_parent"
