--- a/app/src/main/res/layout/fragment_chatting_list_view.xml
+++ b/app/src/main/res/layout/fragment_chatting_list_view.xml
@@ -12,7 +12,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@android:color/transparent"
         android:padding="5dp"
         tools:context="com.bigjeon.grumbling.fragments.Friend_List_Fragment">
         <RelativeLayout
