--- a/app/src/main/res/layout/friend_list_fragment_view_.xml
+++ b/app/src/main/res/layout/friend_list_fragment_view_.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="5dp"
-        android:background="@color/white"
+        android:background="@android:color/transparent"
         tools:context="com.bigjeon.grumbling.fragments.Friend_List_Fragment">
         <RelativeLayout
             android:padding="5dp"
