--- a/app/src/main/res/layout/notification_item.xml
+++ b/app/src/main/res/layout/notification_item.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:padding="5dp"
     android:id="@+id/Notification_Container"
+    android:background="@android:color/transparent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/Notification_User_Img"
