--- a/app/src/main/res/layout/post_view_item.xml
+++ b/app/src/main/res/layout/post_view_item.xml
@@ -2,21 +2,25 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingBottom="5dp"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="350dp">
+    android:layout_height="430dp">
     <RelativeLayout
         android:id="@+id/Post_View_Content_Container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
         <FrameLayout
             android:layout_below="@id/Post_View_Title_Container"
             android:background="@color/Transparent_Black30"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="360dp">
             <ImageView
                 android:id="@+id/Post_View_Background"
                 android:scaleType="centerCrop"
@@ -26,9 +30,29 @@
         </FrameLayout>
             <RelativeLayout
                 android:id="@+id/Post_View_Title_Container"
-                android:background="@color/white"
+                android:padding="3dp"
+                android:background="@android:color/transparent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/Posting_Favorite_Count_TV"
+                    android:text="000"
+                    android:textSize="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="5dp">
+                </TextView>
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/Post_View_Favorite_Circle_CIV"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginRight="3dp"
+                    android:layout_centerInParent="true"
+                    android:layout_toLeftOf="@id/Posting_Favorite_Count_TV"
+                    android:background="@drawable/ic_baseline_favorite_border_24">
+                </de.hdodenhof.circleimageview.CircleImageView>
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/Post_View_User_Img"
                 android:src="@mipmap/ic_launcher"
@@ -36,41 +60,24 @@
                 android:layout_alignParentLeft="true"
                 app:civ_border_width="1dp"
                 app:civ_border_color="@color/Transparent_Green"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginLeft="5dp">
             </de.hdodenhof.circleimageview.CircleImageView>
             <TextView
                 android:id="@+id/Post_View_User_Name"
                 android:text="User_Name"
-                android:textSize="10dp"
+                android:textSize="12dp"
                 android:textStyle="bold"
                 android:textColor="@color/black"
+                android:layout_centerInParent="true"
                 android:layout_toRightOf="@+id/Post_View_User_Img"
                 android:layout_marginTop="15dp"
                 android:layout_marginLeft="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
             </TextView>
-            <TextView
-                android:id="@+id/Posting_Favorite_Count_TV"
-                android:text="000"
-                android:textSize="7dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="10dp">
-            </TextView>
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/Post_View_Favorite_Circle_CIV"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_centerInParent="true"
-                android:layout_toLeftOf="@+id/Posting_Favorite_Count_TV"
-                android:background="@drawable/ic_baseline_favorite_border_24">
-            </de.hdodenhof.circleimageview.CircleImageView>
             </RelativeLayout>
         <TextView
             android:id="@+id/Post_View_Content"
@@ -78,5 +85,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
         </TextView>
+
+        <RelativeLayout
+            android:background="@android:color/transparent"
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="20dp">
+            <TextView
+                android:id="@+id/Post_Write_Date"
+                android:text="Write_Date"
+                android:textSize="10dp"
+                android:textColor="@color/black"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="5dp"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            </TextView>
+        </RelativeLayout>
     </RelativeLayout>
 </LinearLayout>
