--- a/app/src/main/res/layout/timepeed_friends_request_item.xml
+++ b/app/src/main/res/layout/timepeed_friends_request_item.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="5dp"
     android:layout_marginBottom="5dp"
-    android:layout_height="60dp">
+    android:layout_height="60dp"
+    android:background="@android:color/transparent">
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/Timepeed_Friends_User_CIV"
         android:layout_width="50dp"
