--- a/app/src/main/res/layout/timepeed_post_item.xml
+++ b/app/src/main/res/layout/timepeed_post_item.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:layout_marginBottom="5dp"
+    android:background="@android:color/transparent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/Timepeed_Post_User_CIV"
