--- a/app/src/main/res/layout/my_chatting_item.xml
+++ b/app/src/main/res/layout/my_chatting_item.xml
@@ -18,7 +18,8 @@
         android:background="@drawable/my_chat_background"
         android:textColor="@color/black"
         android:layout_alignParentRight="true"
-        android:textSize="10dp"
+        android:textSize="11dp"
+        android:textStyle="bold"
         android:padding="10dp"
         android:layout_marginBottom="5dp"
         android:layout_width="wrap_content"
@@ -40,6 +41,7 @@
             android:layout_alignBottom="@id/Chatting_Text_TV"
             android:layout_toLeftOf="@id/Chatting_Text_TV"
             android:text="1"
+            android:textStyle="bold"
             android:textColor="@color/purple_200"
             android:textSize="10dp"
             android:layout_width="wrap_content"
