--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="Gray">#474646</color>
     <color name="Transparent_light_Green">#8071D675</color>
+    <color name="trans_80_light_white">#80FFFFFF</color>
 
     <color name="dark_black">#FF000000</color>
     <color name="light_Gray">#474646</color>
@@ -42,11 +43,13 @@
     <color name="trans_light_white">#30FFFFFF</color>
     <color name="trans_light_Gray">#30474646</color>
 
+    <color name="Transparent_Black10">#10000000</color>
     <color name="Transparent_Black30">#30000000</color>
     <color name="Transparent_Black40">#40000000</color>
     <color name="Transparent_Black50">#50000000</color>
     <color name="Transparent_Black70">#70000000</color>
     <color name="Transparent_Black80">#80000000</color>
+    <color name="Transparent_Black90">#90000000</color>
     <color name="Transparent_White">#50FFFFFF</color>
     <color name="Transparent_Green">#8039CF3F</color>
 
