--- a/app/src/main/res/drawable/gradient_white_to_transparentblack.xml
+++ b/app/src/main/res/drawable/gradient_white_to_transparentblack.xml
@@ -3,8 +3,8 @@
     <gradient
         android:angle="90"
         android:type="linear"
-        android:startColor="@color/Transparent_Black30"
-        android:centerColor="@color/Transparent_Black40"
-        android:endColor="@color/Transparent_Black80">
+        android:startColor="@color/Transparent_Black50"
+        android:centerColor="@color/Transparent_Black30"
+        android:endColor="@color/trans_light_white">
     </gradient>
 </shape>
