--- a/app/src/main/res/layout/activity_app_main.xml
+++ b/app/src/main/res/layout/activity_app_main.xml
@@ -11,11 +11,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/app_main_background"
+    android:background="@drawable/app_main_activity_background_img"
     tools:context="com.bigjeon.grumbling.App_Main_Activity">
     <RelativeLayout
         android:id="@+id/Title"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:orientation="horizontal"
@@ -70,6 +70,10 @@
         android:id="@+id/App_Main_Fragment_FrameLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:paddingTop="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:background="@android:color/transparent"
         app:layout_constraintBottom_toTopOf="@+id/adViewBanner"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
@@ -83,7 +87,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="8dp"
+        android:padding="3dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
@@ -103,9 +108,9 @@
                 android:layout_height="25dp"
                 android:layout_centerInParent="true"
                 android:background="@drawable/ic_baseline_group_24"
-                android:text="타임 피드"
-                android:textColor="@color/black"
-                android:textSize="10dp"></de.hdodenhof.circleimageview.CircleImageView>
+                android:backgroundTint="@color/Transparent_Black50"
+                android:textSize="10dp">
+            </de.hdodenhof.circleimageview.CircleImageView>
         </RelativeLayout>
 
         <RelativeLayout
@@ -121,7 +126,8 @@
                 android:layout_height="25dp"
                 android:layout_centerInParent="true"
                 android:background="@drawable/ic_baseline_article_24"
-                android:backgroundTint="@color/purple_200"></de.hdodenhof.circleimageview.CircleImageView>
+                android:backgroundTint="@color/Transparent_Black90">
+            </de.hdodenhof.circleimageview.CircleImageView>
         </RelativeLayout>
 
         <RelativeLayout
@@ -136,7 +142,8 @@
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_centerInParent="true"
-                android:background="@drawable/ic_baseline_question_answer_24"></de.hdodenhof.circleimageview.CircleImageView>
+                android:background="@drawable/ic_baseline_question_answer_24"
+                android:backgroundTint="@color/Transparent_Black50"></de.hdodenhof.circleimageview.CircleImageView>
         </RelativeLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
