--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -11,7 +11,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/post_chatting_background"
+    android:background="@drawable/timepeed_activity_background_img"
     tools:context="com.bigjeon.grumbling.Notification_Activity">
 
     <RelativeLayout
@@ -19,15 +19,6 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         app:layout_constraintTop_toTopOf="parent">
-        <TextView
-            android:text="타임 피드"
-            android:layout_centerInParent="true"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:textSize="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-        </TextView>
         <ImageView
             android:id="@+id/Notification_Back_IMV"
             android:layout_marginLeft="5dp"
@@ -44,28 +35,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout">
-
-        <TextView
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/Timepeed_TV_Post"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_weight="1"
-            android:gravity="center_horizontal"
-            android:text="게시글"
-            android:textColor="@color/purple_200"
-            android:textSize="15dp"
-            android:textStyle="bold"></TextView>
-
-        <TextView
+            android:backgroundTint="@color/trans_light_pink"
+            android:background="@drawable/ic_baseline_favorite_24">
+        </de.hdodenhof.circleimageview.CircleImageView>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/Timepeed_TV_Friends"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_weight="1"
-            android:gravity="center_horizontal"
-            android:text="친구 추가"
-            android:textColor="@color/black"
-            android:textSize="15dp"
-            android:textStyle="bold"></TextView>
+            android:background="@drawable/ic_baseline_group_24"
+            android:backgroundTint="@color/Transparent_Black50"
+            android:layout_centerInParent="true">
+        </de.hdodenhof.circleimageview.CircleImageView>
+        </RelativeLayout>
     </LinearLayout>
 
     <FrameLayout
