--- a/app/src/main/res/layout/chatting_list_item.xml
+++ b/app/src/main/res/layout/chatting_list_item.xml
@@ -13,14 +13,15 @@
         app:civ_border_width="1dp"
         app:civ_border_color="@color/purple_200"
         android:src="@drawable/app_logo"
-        android:layout_width="45dp"
-        android:layout_height="45dp">
+        android:layout_width="50dp"
+        android:layout_height="50dp">
     </de.hdodenhof.circleimageview.CircleImageView>
     <TextView
         android:id="@+id/Chatting_List_User_Name_TV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="User_Name"
+        android:textStyle="bold"
         android:textColor="@color/black"
         android:layout_marginLeft="5dp"
         android:textSize="15dp"
