--- a/app/src/main/res/layout/my_chatting_reply.xml
+++ b/app/src/main/res/layout/my_chatting_reply.xml
@@ -30,6 +30,7 @@
                         android:textColor="@color/black"
                         android:textSize="10dp"
                         android:padding="2dp"
+                        android:textStyle="bold"
                         android:background="@drawable/post_view_title_under_edge_1dp"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentTop="true"
@@ -40,6 +41,7 @@
                         android:id="@+id/Replied_Chat_TV"
                         android:layout_alignParentRight="true"
                         android:textSize="10dp"
+                        android:textStyle="bold"
                         android:textColor="@color/Transparent_Black70"
                         android:layout_centerInParent="true"
                         android:layout_below="@+id/Replied_Name"
@@ -56,7 +58,8 @@
                     android:textColor="@color/black"
                     android:layout_below="@id/Reply_Containier"
                     android:layout_alignParentRight="true"
-                    android:textSize="10dp"
+                    android:textSize="11dp"
+                    android:textStyle="bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                 </TextView>
@@ -79,6 +82,7 @@
             android:layout_toLeftOf="@id/Chatting_Text_Container"
             android:text="1"
             android:textColor="@color/purple_200"
+            android:textStyle="bold"
             android:textSize="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
