--- a/app/src/main/res/layout/post_view_item.xml
+++ b/app/src/main/res/layout/post_view_item.xml
@@ -2,10 +2,11 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingBottom="5dp"
     android:orientation="vertical"
+    android:background="@drawable/none_effect_background_img"
     android:layout_width="match_parent"
-    android:layout_height="430dp">
+    android:layout_marginBottom="10dp"
+    android:layout_height="420dp">
     <RelativeLayout
         android:id="@+id/Post_View_Content_Container"
         android:layout_width="match_parent"
@@ -16,11 +17,9 @@
         app:layout_constraintTop_toTopOf="parent">
         <FrameLayout
             android:layout_below="@id/Post_View_Title_Container"
-            android:background="@color/Transparent_Black30"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="5dp"
+            android:background="@color/Transparent_Black70"
             android:layout_width="match_parent"
-            android:layout_height="360dp">
+            android:layout_height="420dp">
             <ImageView
                 android:id="@+id/Post_View_Background"
                 android:scaleType="centerCrop"
@@ -30,41 +29,21 @@
         </FrameLayout>
             <RelativeLayout
                 android:id="@+id/Post_View_Title_Container"
-                android:padding="3dp"
-                android:background="@android:color/transparent"
+                android:padding="2dp"
+                android:background="@drawable/none_effect_background_img"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:id="@+id/Posting_Favorite_Count_TV"
-                    android:text="000"
-                    android:textSize="10dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="5dp">
-                </TextView>
+                android:layout_height="50dp">
+
                 <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/Post_View_Favorite_Circle_CIV"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_marginRight="3dp"
+                    android:id="@+id/Post_View_User_Img"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_alignParentLeft="true"
                     android:layout_centerInParent="true"
-                    android:layout_toLeftOf="@id/Posting_Favorite_Count_TV"
-                    android:background="@drawable/ic_baseline_favorite_border_24">
-                </de.hdodenhof.circleimageview.CircleImageView>
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/Post_View_User_Img"
-                android:src="@mipmap/ic_launcher"
-                android:layout_centerInParent="true"
-                android:layout_alignParentLeft="true"
-                app:civ_border_width="1dp"
-                app:civ_border_color="@color/Transparent_Green"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginLeft="5dp">
-            </de.hdodenhof.circleimageview.CircleImageView>
+                    android:layout_marginTop="5dp"
+                    android:src="@drawable/default_profile_img"
+                    app:civ_border_color="@color/Transparent_Green"
+                    app:civ_border_width="1dp"></de.hdodenhof.circleimageview.CircleImageView>
             <TextView
                 android:id="@+id/Post_View_User_Name"
                 android:text="User_Name"
@@ -87,19 +66,40 @@
         </TextView>
 
         <RelativeLayout
-            android:background="@android:color/transparent"
+            android:background="@color/Transparent_Black70"
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
-            android:layout_height="20dp">
+            android:layout_height="40dp">
+            <TextView
+                android:id="@+id/Posting_Favorite_Count_TV"
+                android:text="000"
+                android:textSize="10dp"
+                android:textColor="@color/trans_80_light_white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_toRightOf="@id/Post_View_Favorite_Circle_CIV"
+                android:layout_marginRight="5dp">
+            </TextView>
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/Post_View_Favorite_Circle_CIV"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginLeft="3dp"
+                android:layout_centerInParent="true"
+                android:layout_alignParentLeft="true"
+                android:backgroundTint="@color/trans_80_light_white"
+                android:background="@drawable/ic_baseline_favorite_border_24">
+            </de.hdodenhof.circleimageview.CircleImageView>
             <TextView
                 android:id="@+id/Post_Write_Date"
                 android:text="Write_Date"
                 android:textSize="10dp"
-                android:textColor="@color/black"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="5dp"
                 android:layout_marginRight="5dp"
+                android:textColor="@color/trans_60_light_white"
+                android:layout_centerInParent="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="5dp"
                 android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
